2 - Migrate to maven, update deserializer and algorithm, add frontend